#Product page design #Adding propreties to models and make migrations #Start make the converter from wix

--- a/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
@@ -37,7 +37,7 @@
                         </div>
                         <div class="form-group mt-3">
                             <label class="form-label">Description</label>
-                            <InputTextArea @bind-Value="MyProduct.Description" class="form-control"></InputTextArea>
+                            <InputTextArea @bind-Value="MyProduct.LongDescription" class="form-control"></InputTextArea>
                         </div>
                         <div class="form-group mt-3">
                             <label class="form-label @(ImageUploadMessage == ""?"" : "text-danger")">
