--- a/TennisStoreClient/Pages/ProductPages/ProductDetails.razor
+++ b/TennisStoreClient/Pages/ProductPages/ProductDetails.razor
@@ -29,7 +29,7 @@
                                     </div>
                                     <div class="hstack gap-2">
                                         <span>Description:</span>
-                                        <span>@Product.Description</span>
+                                        <span>@Product.ShortDescription</span>
                                     </div>
                                     <div class="hstack gap-2">
                                         <span>Price:</span>
