--- a/TennisStoreClient/Pages/ProductPages/RecommendedPage.razor
+++ b/TennisStoreClient/Pages/ProductPages/RecommendedPage.razor
@@ -20,7 +20,7 @@
                                                         <img src="@product.Image1" width="100" height="150" class="d-flex justify-content-center" style="margin-right:5px;"  />
                                                         <div class="vstack gap1">
                                                             <h5>@product.Name</h5>
-                                                            <h6>@(General.GetDescription(product.Description!))</h6>
+                                                            <h6>@(General.GetDescription(product.ShortDescription!))</h6>
                                                             <h6 class="text-danger">@product.Price</h6>
                                                         </div>
                                                     </div>
