--- a/TennisStoreClient/Pages/ProductPages/BannerPage.razor
+++ b/TennisStoreClient/Pages/ProductPages/BannerPage.razor
@@ -17,7 +17,7 @@
                             <div class="text-start">
                                 <h2 style="font-family:Impact">Available On A Cool Price</h2>
                                 <h5 class="text-info">@Banner1.Name</h5>
-                                <p class="text-muted fs-6" style="font-family:Tahoma;">@(General.GetDescription(Banner1.Description!))</p>
+                                <p class="text-muted fs-6" style="font-family:Tahoma;">@(General.GetDescription(Banner1.ShortDescription!))</p>
                                 <h6 class="text-muted">Free Pickup and Delivery Available</h6>
                                 <h5 class="text-danger">@Banner1.Price.ToString("$#.##")</h5>
                                 <button class="btn btn-danger" @onclick="() => AddToCart(Banner1)">
@@ -37,7 +37,7 @@
                             <div class="text-start">
                                 <h2 style="font-family:Impact">Secure this <u>Deal</u>Now!</h2>
                                 <h5 class="text-info">@Banner2.Name</h5>
-                                <p class="text-muted fs-6" style="font-family:Tahoma;">@(General.GetDescription(Banner2.Description!))</p>
+                                <p class="text-muted fs-6" style="font-family:Tahoma;">@(General.GetDescription(Banner2.ShortDescription!))</p>
                                 <h6 class="text-muted">Free Pickup and Delivery Available</h6>
                                 <h5 class="text-danger">@Banner2.Price.ToString("$#.##")</h5>
                                 <button class="btn btn-danger" @onclick="() => AddToCart(Banner2)">
