--- a/TennisStoreClient/Shared/Header/DesktopNavigationMenu.razor
+++ b/TennisStoreClient/Shared/Header/DesktopNavigationMenu.razor
@@ -3,7 +3,7 @@
         <ul class="desktop-menu-category-list">
 
             <li class="menu-category">
-                <a href="#" class="menu-title">בית</a>
+                <a href="/" class="menu-title">בית</a>
             </li>
 
             <li class="menu-category">
