--- a/TennisStoreClient/Pages/ProductPages/ProductPage.razor
+++ b/TennisStoreClient/Pages/ProductPages/ProductPage.razor
@@ -42,7 +42,7 @@
     <section class="main">
         <div class="gallery">
             <div class="main-img">
-                <img class="active" src="@CurrentProduct?.Image1" alt="@CurrentProduct?.Name" />
+                <img class="active" src="@CurrentProduct?.Image1" alt="@CurrentProduct?.Name"  />
             </div>
             <div class="thumb-list">
                 @foreach (var productAttribute in CurrentProduct?.Attributes ?? Enumerable.Empty<ProductAttribute>())
@@ -82,6 +82,22 @@
             </div>
         </div>
     </section>
+    <div class="container">
+        <div class="product-description-container">
+            <h2 class="product-description-title">כובע טניס Ultralight של וילסון</h2>
+            <p class="product-description-text">
+                כובע הטניס Ultralight של וילסון הוא כובע קל משקל המיועד להגן עליך מפני קרני השמש במהלך משחק הטניס.
+                הכובע עשוי מבד סרוג ומשולב רשת בצדדיו ובחלקו האחורי, מה שמאפשר אוורור ונוחות מרבית.
+                הכובע כולל סגירה אחורית להתאמה אישית לראש השחקן.
+            </p>
+            <p class="product-description-text">הכובע זמין בצבעים שונים, כולל:</p>
+            <ul class="product-description-list">
+                <li class="product-description-list-item">לבן עם לוגו וילסון</li>
+                <li class="product-description-list-item">אדום עם לוגו וילסון</li>
+                <li class="product-description-list-item">שחור עם לוגו וילסון</li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 @code {
