--- a/TennisStoreClient/Pages/ProductPages/ProductPage.razor.css
+++ b/TennisStoreClient/Pages/ProductPages/ProductPage.razor.css
@@ -328,6 +328,10 @@
     }
 }
 
+.bounce {
+    animation: bounce 1s ease-in-out;
+}
+
 /*-----------------------------------*\
    * Media Queries
 \*-----------------------------------*/
